todo/base/todo-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: # kpt-merge: /guestbook-ui
  name: todo-ui
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: todo-ui
  template:
    metadata:
      labels:
        app: todo-ui
    spec:
      containers:
        - image: gcr.io/tony-sandbox-308422/go-webapp:v1.0
          name: todo-ui
          ports:
            - containerPort: 8083
