todo/base/todo-ui-svc.yaml
apiVersion: v1
kind: Service
metadata: # kpt-merge: /guestbook-ui
  name: todo-ui
spec:
  ports:
    - port: 80
      targetPort: 8083
  selector:
    app: todo-ui
