todo/base/ingress.yaml
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: todo-ui
#spec:
#  defaultBackend:
#    service:
#      name: todo-ui
#      port:
#        number: 8082
#  rules:
#  - host: localhost
#    http:
#      paths:
#      - backend:
#          service:
#            name: todo-ui
#            port:
#              number: 8082
#        path: /
#        pathType: Exact

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ui
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
     - host: localhost
       http:
         paths:
           - path: /
             pathType: Prefix
             backend:
               service:
                 name: todo-ui
                 port:
                   number: 8082
